# Resource-Compiler

./: .gitignore  LICENSE  readme.md
compiler_gui/: Cargo.toml  build.rs
compiler_gui/src/: main.rs
resource_stub/: Cargo.toml
resource_stub/src/: main.rs
